# ai-for-stock-exchange

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.terraform.yml  docker-compose.yml  dockerfile  dockerfile.terraform  pyproject.toml
app/: app.py
notebooks/: analytics.ipynb
src/: ai_agent.py  analytics.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/modules/web_app/: main.tf  outputs.tf  security_group.tf  ssh.tf  variables.tf
terraform/modules/web_app/scripts/: setup_web_app.sh
