[project]
name = "ai-for-stock-exchange"
version = "0.1.0"
description = "Webapp for generating insights about stock exchange."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=1.0,<2.0)",
    "plotly (>=6.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ipykernel = "^7.1.0"
nbformat = "^5.10.4"
