[project]
name = "ai-for-stock-exchange"
version = "0.1.0"
description = "Webapp for generating insights about stock exchange."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "yfinance (>=1.0,<2.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "agno (>=2.3.24,<3.0.0)",
    "groq (>=1.0.0,<2.0.0)",
    "ddgs (>=9.10.0,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ipykernel = "^7.1.0"
nbformat = "^5.10.4"
